# cache-pm

./: Cargo.toml
app/: Cargo.toml  test.pkg
app/src/: args.rs  commands.rs  error.rs  main.rs
client/: Cargo.toml
client/database/: register.db
client/src/: args.rs  commands.rs  config.rs  error.rs  main.rs
client/src/commands/: de_select.rs  files.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  uninstall.rs
lib/: Cargo.toml
lib/src/: archive.rs  database.rs  error.rs  lib.rs  repo.rs
lib/src/database/: core.rs  mod.rs  register.rs
lib/src/package/: build.rs  dir.rs  metadata.rs  mod.rs  spec.rs
packager/: Cargo.toml
packager/build-X86_64/: install
packager/src/: args.rs  commands.rs  error.rs  main.rs
server/: Cargo.toml
server/src/: args.rs  commands.rs  error.rs  main.rs
server/src/commands/: connection.rs  mod.rs  status.rs
server/src/serve/: connection.rs  mod.rs
