[package]
name = "dist"
version = "0.1.0"
edition = "2021"

[dependencies]
library = { path = "../lib" }
clap = { version = "3.1.6", features = ["derive"] }
rkyv = { version = "0.7.36", features = ["alloc", "validation"] }
quit = "1.1.4"
tempfile = "3.3.0"
sqlite3 = "0.24.0"
confy = "0.4.0"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
try-traits = "0.1.1"
